# fastapi-sqlmodel-crud

./: .gitignore  README.md  admisadmin.db  pyproject.toml
demo/: main.py
fastapi_sqlmodel_crud/: README.md  _sqlmodel.py
tests/test_crud/: test_Mapper_Events.py  test_SQLModelCrud_fields.py  test_SQLModelCrud_routes_async.py  test_SQLModelCrud_routes_sync.py  test_SQLModelCrud_schemas.py  test_SQLModelSelector.py
