[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_sqlmodel_crud"
authors = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
maintainers = [
    { name = "Atomi", email = "1456417373@qq.com" },
]
description = "fastapi-sqlmodel-crud is a program which is based on fastapi+sqlmodel and used to quickly build the Create, Read, Update, Delete generic API interface."
readme = "README.md"
requires-python = ">=3.6.1"
dynamic = ["version"]
keywords = [
    "sqlmodel",
    "fastapi-sqlmodel-crud",
    "fastapi-amis-admin",
    "fastapi-crud",
    "fastapi-sqlmodel",
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi>=0.68.0",
    "sqlmodel>=0.0.8",
    "ujson>=4.0.1",
    "sqlalchemy-database>=0.1.0,<0.2.0",
]

[project.urls]
Documentation = "https://docs.gh.amis.work/crud/SQLModelCrud/"
Source = "https://github.com/amisadmin/fastapi_amis_admin"
FastAPI-Amis-Admin = "https://github.com/amisadmin/fastapi_amis_admin"

[project.optional-dependencies]
test = [
    "pytest >=6.2.4,<7.0.0",
    "aiosqlite",
    "pytest-asyncio>=0.17",
    "httpx",
]

# pytest
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
# pytest-asyncio
asyncio_mode = "auto"